Ajax calls to BE to load homepage data

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -106,9 +106,8 @@
 								Select a job role
 							</button>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#">Link 1</a>
-								<a class="dropdown-item" href="#">Link 2</a>
-								<a class="dropdown-item" href="#">Link 3</a>
+								<a class="dropdown-item" href="#">Developer</a>
+								<a class="dropdown-item" href="#">Intern</a>
 							</div>
 						</div>
 						<!-- <div class="input-group">
@@ -119,242 +118,13 @@
                     </div> -->
 					</form>
 					<div class="container">
-						<div class="row">
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/ms.png" />
-								</li>
-								<li>
-									<p>Senior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/FB.jpg" /> </li>
-								<li>
-									<p>Junior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/Lyft_logo.png" /> </li>
-								<li>
-									<p>Senior Web Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/ms.png" />
-								</li>
-								<li>
-									<p>Senior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/FB.jpg" /> </li>
-								<li>
-									<p>Junior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/Lyft_logo.png" /> </li>
-								<li>
-									<p>Senior Web Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/ms.png" />
-								</li>
-								<li>
-									<p>Senior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/ms.png" />
-								</li>
-								<li>
-									<p>Senior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/FB.jpg" /> </li>
-								<li>
-									<p>Junior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/Lyft_logo.png" /> </li>
-								<li>
-									<p>Senior Web Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/ms.png" />
-								</li>
-								<li>
-									<p>Senior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/FB.jpg" /> </li>
-								<li>
-									<p>Junior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/Lyft_logo.png" /> </li>
-								<li>
-									<p>Senior Web Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/ms.png" />
-								</li>
-								<li>
-									<p>Senior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/FB.jpg" /> </li>
-								<li>
-									<p>Junior Backend Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
-							<ul class="job col-sm-5">
-								<li>
-									<img src="images/Lyft_logo.png" /> </li>
-								<li>
-									<p>Senior Web Developer</p>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#jobModal">
-										<p>view
-											<img src="images/Arrow.png" />
-										</p>
-									</a>
-								</li>
-							</ul>
+						<div class="row jobs">
+							
 						</div>
 						<div>
 							<br />
 							<h5>
-								<button class="listings btn btn-outline btn-sm" href="#">Load more listings
+								<button id="load_listings" class="listings btn btn-outline btn-sm">Load more listings
 									<img src="images/arrowdown.svg" />
 								</button>
 							</h5>
@@ -370,31 +140,29 @@
 		<div style="width: 100%;" class="modal fade" id="jobModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
 		 aria-hidden="true">
 			<div class="modal-dialog" role="document">
-				<div class="modal-content">
+				<div class="modal-content" style="text-align: center;">
 					<div class="modal-body" id="job-details">
 						<button type="button" class="close ml-auto" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
-						<h3 class="mt-4" class="font-weight-bold">Job Details</h3>
+						<h3 class="mt-4" >Job Details</h3>
 						<div class="row mt-4">
 							<div class="col-md-6">
-								<p class="text-muted">Job Title</p>
-								<h6 class="font-weight-bold">Fullstack developer</h6>
+								<p class="font-weight-bold">Job Title</p>
+								<h6 id="job-title"></h6>
 							</div>
 							<div class="col-md-6">
-								<p class="text-muted">Company</p>
-								<h6 class="font-weight-bold">Microsoft Technologies</h6>
+								<p class="font-weight-bold">Company</p>
+								<h6 id="company-name"></h6>
 							</div>
 						</div>
 						<div class="mt-4">
 							<h6 class="font-weight-bold">Requirements</h6>
-							<p class="font-weight-light text-muted">3 years experience</p>
-							<p class="font-weight-light text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-								aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-							<p class="font-weight-light text-muted">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-								occaecat cupidatat </p>
+							<p id="job-requirement" class="text-muted">2years Minimum</p>
+							<hr/>
+							<p id="job-description" class="text-muted"></p>
 						</div>
-						<a href="#" class="btn btn-custom mt-4 px-4">Hire agent</a>
+						<a href="#" style="margin: 0 auto; background: #11144C; color: #fff;" class="btn mt-4 px-4">Hire agent  &#40;coming soon&#41;</a>
 
 					</div>
 
