--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,7 +10,7 @@
 						<a href="#job-posting">Jobs</a>
 					</li>
 					<li>
-						<button data-toggle="modal" class="btn btn-custom" data-target="#registerModal">
+						<button style="z-index:99999999999999999 !important;" data-toggle="modal" class="btn btn-custom" data-target="#registerModal">
 							</a>Pay an Agent</button>
 					</li>
 				</ul>
