--- a/views/about.hbs
+++ b/views/about.hbs
@@ -13,7 +13,7 @@
         #about > h1 {
             background: #11144C;
             color: #fff;
-            text-align: center;
+            text-align: justify;
             margin: 15px 0 30px;
             padding: 5px 0;
         }
