Justified text alignment property.

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -14,7 +14,7 @@
         #about > h1 {
             background: #11144C;
             color: #fff;
-            text-align: center;
+            text-align: justify;
             margin: 15px 0 30px;
             padding: 10px 0;
             font-family: Work Sans;
