Justified text alignment property.

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -12,7 +12,7 @@
         #contact>h1 {
             background: #11144C;
             color: #fff;
-            text-align: center;
+            text-align: justify;
             margin: 15px 0 30px;
             padding: 5px 0;
         }
